kubernetes/int-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
  - name: web
    protocol: HTTP
    # find port traefik endpint is listening on
    # kubectl get endpoints -n traefik-system
    #  NAME      ENDPOINTS                         AGE
    #  traefik   10.42.0.53:8000,10.42.0.53:8443   7d
    port: 8000
    allowedRoutes:
      namespaces:
        from: All
