kubernetes/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-gateway-route
  namespace: default
   
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: web
  hostnames:
    - 'whoami.localhost'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-gateway # <--- Point to your API Gateway service
          port: 8080
       # - name: analysis-canary-canary # <--- Point to your Canary service
       #   port: 3000
